ipad and small screen renderings updated

--- a/src/style/css/c6__exp.css
+++ b/src/style/css/c6__exp.css
@@ -295,7 +295,7 @@
         background-repeat: no-repeat; background-position: 0 0;
     }
     .exp-hero__vertical-spacer, .exp-hero__group {
-        height:42.375em; /*678px*/
+        height:40.125em; /*642px*/
     }
     @media only screen and (min-width:2001px) {
         .exp-hero__vertical-spacer, .exp-hero__group {
@@ -314,10 +314,16 @@
     }
     @media only screen and (min-width:1250px) and (max-width:1400px) {
         .exp-hero__vertical-spacer, .exp-hero__group {
-            height:45em; /*720px*/
+            height:43.5em; /*696px*/
         }
     }
-    @media only screen and (min-width:700px) and (max-width:1000px) {
+    /* 1051 - 1249 = uses default height of 642px */
+    @media only screen and (min-width:901px) and (max-width:1050px), only screen and (min-width:1200px) and (max-width:1400px) and (min-height:700px) and (max-height:900px) {
+        .exp-hero__vertical-spacer, .exp-hero__group {
+            height:36.375em; /*582px*/
+        }
+    }
+    @media only screen and (min-width:700px) and (max-width:900px) {
         .exp-hero__vertical-spacer, .exp-hero__group {
             height:31.125em; /*498px*/
         }
