--- a/src/style/css/c6__exp.css
+++ b/src/style/css/c6__exp.css
@@ -280,7 +280,7 @@
            margin:0.083em 0 0.5em 0;
         }
         .exp-hero__sub {
-            font-size:1.5em; font-weight:300; line-height: 1.2; font-style:italic;
+            font-size:1.5em; font-weight:300; line-height: 1.3; font-style:italic;
             margin:0;
         }
         .exp-hero__copy {
@@ -290,7 +290,7 @@
             height:42em;
         }
         .exp-hero__highlight {
-            background:#000; background:rgba(0,0,0,0.78); 
+            background:#000; background:rgba(0,0,0,0.78); padding:3px 0;
         }
     .exp-hero__tag {
         position: absolute; top: 0; left: 0;
